--- a/src/pocs/poc1_landing_world/package.xml
+++ b/src/pocs/poc1_landing_world/package.xml
@@ -11,7 +11,9 @@
 
   <depend>rclcpp</depend>
   <depend>gazebo_ros</depend>
-
+  <depend>rclpy</depend>
+  <depend>px4_msgs</depend>
+  <depend>geometry_msgs</depend>
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
 
